Fix annotation card text wrapping.

--- a/app/styles/_omnibox.scss
+++ b/app/styles/_omnibox.scss
@@ -168,6 +168,11 @@
     text-overflow: ellipsis;
 }
 
+.card table td {
+    white-space: nowrap;
+    overflow: hidden;
+    text-overflow: ellipsis;
+}
 
 .card .left{
     float: left;
